[gd_scene load_steps=8 format=2]

[ext_resource path="res://AirFoil.gd" type="Script" id=1]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
params_cull_mode = 2
albedo_color = Color( 0.00784314, 0.0588235, 1, 0.392157 )

[sub_resource type="PrismMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0.00784314, 0, 1, 0.392157 )

[sub_resource type="SpatialMaterial" id=5]
render_priority = 127
flags_transparent = true
flags_no_depth_test = true
albedo_color = Color( 1, 0.309804, 0, 0.392157 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 1, 1, 0.392157 )

[node name="AirFoil" type="Spatial"]
visible = false
script = ExtResource( 1 )

[node name="DebugLayer" type="Spatial" parent="."]

[node name="FoilSurface" type="MeshInstance" parent="DebugLayer"]
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="LiftArrow" type="Spatial" parent="DebugLayer"]

[node name="CyanArrow" type="MeshInstance" parent="DebugLayer/LiftArrow"]
transform = Transform( 0.204723, 0, 0, 0, -4.37114e-08, 0.106988, 0, -1, -4.67659e-09, 0, 0, -1 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )

[node name="DragArrow" type="Spatial" parent="DebugLayer"]

[node name="CyanArrow2" type="MeshInstance" parent="DebugLayer/DragArrow"]
transform = Transform( 0.204723, 0, 0, 0, -4.37114e-08, 0.106988, 0, -1, -4.67659e-09, 8.74228e-08, 0, -1 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="LocalFlowArrow" type="Spatial" parent="DebugLayer"]

[node name="CyanArrow2" type="MeshInstance" parent="DebugLayer/LocalFlowArrow"]
transform = Transform( 0.204723, 0, 0, 0, -4.37114e-08, 0.106988, 0, -1, -4.67659e-09, 5.96046e-08, 0, -1 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )
